# rust_learn

./: .gitignore  .gitmodules  README.md  updsh
b1_ggame/src/: main.rs
b_ggame/: Cargo.toml
b_ggame/src/: main.rs
c1_variables/: Cargo.toml
c1_variables/src/: main.rs
c2_datatypes/: Cargo.toml
c2_datatypes/src/: main.rs
c3_functions/: Cargo.toml
c4_comments/: Cargo.toml
c5_control_flow_if/: Cargo.toml
c6_control_flow_loop/: Cargo.toml
d1_ownerships/: Cargo.toml
d2_references_and_borrowing/: Cargo.toml
d3_slices/: Cargo.toml
d3_slices/src/: main.rs
e1_structs_def/: Cargo.toml
e2_rectangles/: Cargo.toml
e3_method_syntax/: Cargo.toml
f1_enum_def/: Cargo.toml
f1_enums_def/: Cargo.toml
f2_match_control_flow/: Cargo.toml
f3_if_let_control_flow/: Cargo.toml
g1_packages_and_crates/: Cargo.toml
g2_def_modules-scope_and_privacy/: Cargo.toml
g3_paths_for_ref_to_items_in_module_tree/: Cargo.toml
g4_bring_path_into_scope_with_use_keyword/: Cargo.toml
g5_sep_modules_into_different_files/: Cargo.toml
h1_collections_vectors/: Cargo.toml
h2_collections_strings/: Cargo.toml
h3_collections_hashmaps/: Cargo.toml
i1_unrecoverable_errors_with_panic/: Cargo.toml
i2_recoverable_errors_with_result/: Cargo.toml
i3_to_panic_or_not_to_panic/: Cargo.toml
j1_generic_types_traits_and_lifetimes/: Cargo.toml
j2_generic_data_types/: Cargo.toml
j3_traits_defining_shared_behavior/: Cargo.toml
j3_traits_defining_shared_behavior/src/: lib.rs  main.rs
j4_validating_references_with_lifetimes/: Cargo.toml
k1_how_to_write_tests/: Cargo.toml
(+31 files in other folders)
