[package]
name = "j3_traits_defining_shared_behavior"
version = "0.1.0"
authors = ["valentino <valentino.digiosaffatte@student.univaq.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
